# action-anchors

./: .gitignore  README.md  plan.md  pyproject.toml  run_analysis.py  run_calibration.py  run_resampling.py
action_anchors/: config.yaml
action_anchors/agent/: prompt_builder.py  tool_parser.py
action_anchors/analysis/: metrics.py  visualize.py
action_anchors/data/: factual_recall.json
action_anchors/outputs/: calibration_factual_recall.json  calibration_gsm8k.json  resampling_factual_recall.json  resampling_gsm8k.json  transcript_pairs_factual_recall.json  transcript_pairs_gsm8k.json  transcripts_factual_recall.json  transcripts_gsm8k.json
action_anchors/resampling/: importance.py  resampler.py  sentence_splitter.py
action_anchors/server/: launch_vllm.sh
action_anchors/tasks/: base.py  factual_recall_search.py  gsm8k_calculator.py
outputs/: calibration_factual_recall.json  calibration_gsm8k.json  resampling_factual_recall.json  resampling_gsm8k.json  transcript_pairs_factual_recall.json  transcript_pairs_gsm8k.json  transcripts_factual_recall.json  transcripts_gsm8k.json
references/: thought_anchors.txt
scripts/: generate_factual_recall.py
